<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_description">Find a nice restaurant and invite your coworkers to lunch !</string>
    <string name="button_login_facebook">Sign in with Facebook</string>
    <string name="button_login_google">Sign in with Google</string>
    <string name="google_web_client_id" translatable="false">1003255926076-f73f5lum45ej8jtv3708ngs666g80tjm.apps.googleusercontent.com</string>
    <string name="google_signin_error">Google sign in error</string>
    <string name="welcome_signin">"Welcome "</string>
    <string name="google_connexion_canceled">Google sign in canceled.</string>
    <string name="facebook_app_id" translatable="false">321850112783246</string>
    <string name="facebook_application_id" translatable="false">321850112783246</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb321850112783246</string>
    <string name="facebook_sign_in_canceled">Facebook sign in canceled.</string>
    <string name="facebook_sign_in_error">Facebook sign in error.</string>
    <string name="menu_fragment_home_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navdrawer_menu_your_lunch">YOUR LUNCH</string>
    <string name="navdrawer_menu_settings">SETTINGS</string>
    <string name="navdrawer_menu_logout">LOGOUT</string>
    <string name="menu_bottomNavigationView_mapView">Map View</string>
    <string name="menu_bottomNavigationView_listView">List View</string>
    <string name="menu_bottomNavigationView_workmates">Workmates</string>
    <string name="permission_location_request">" needs your location to work properly."</string>
    <string name="navigation_view_user_disconnected">User disconnected</string>
    <string name="network_unavailable">Network unavailable, please turn on.</string>
    <string name="location_disabled">Location disabled, please turn on.</string>
    <string name="listview_norestaurant">No restaurant :(</string>
    <string name="restaurant_name_tools">Le Zinc !</string>
    <string name="restaurant_address_tools">12 rue du Faubourg Poissonnière</string>
    <string name="restaurant_openinghours_not_specified">Not specified</string>
    <string name="restaurant_distance_tools">120m</string>
    <string name="restaurant_numberparticipants_tools">(2)</string>
    <string name="distance_unit">m</string>
    <string name="imageButon_call">CALL</string>
    <string name="imageButton_like" translatable="false">LIKE</string>
    <string name="imageButton_website">WEBSITE</string>
    <string name="fab_userChoice">User choice</string>
    <string name="textView_noWorkmates">No participants :(</string>
    <string name="restaurant_setted">Enjoy it!</string>
    <string name="title_choice_confirmation">Choice confirmation</string>
    <string name="message_choice_confirmation">"Do you want to eat to "</string>
    <string name="interrogation">"?"</string>
    <string name="button_negative">Cancel</string>
    <string name="button_positive">Yes</string>
    <string name="title_choice_cancel">Cancel your choice</string>
    <string name="message_choice_cancel">Are you sure to cancel your choice?</string>
    <string name="title_likeAPlace">Like confirmation</string>
    <string name="message_likeAPlace">"Do you want to like "</string>
    <string name="title_dislikeAPlace">Cancel your like</string>
    <string name="message_disklikeAPlace">"Do you want to dislike "</string>
    <string name="snackbar_dislikeAPlace">"You don\'t like this place anymore."</string>
    <string name="snackbar_placeLiked">You like it now!</string>
    <string name="workmate_is_eating">" is eating at "</string>
    <string name="workmate_not_eating">" not choose yet"</string>
    <string name="restaurant_open">Open</string>
    <string name="restaurant_close">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Sync Preferences -->
    <string name="settings_category_notification">Notification</string>
    <string name="settings_notification_switch_title">Enable daily notification</string>
    <string name="settings_about">Designed by your coworkers, Go4Lunch wants to help you to lunch quickly and easily!</string>

    <!-- Chat -->
    <string name="menu_bottomNavigationView_chat">Chat</string>
    <string name="chat_message">Message</string>
    <string name="chat_messag_hint">Type your message</string>
    <string name="chat_contentDescription">Image into the message.</string>
    <string name="sendername_hour_separator">-</string>
    <string name="daily_notification_channel_name">Daily reminder</string>
    <string name="daily_notification_description">Daily reminder, when it\'s time to lunch !</string>
    <string name="notification_description">"Today you are eating with : "</string>
    <string name="daily_notification_begin_content">"Hey "</string>
    <string name="comma_space">", "</string>
    <string name="about_go4lunch">About Go4Lunch</string>
    <string name="no_restaurant_choose">You have not choose any restaurant yet.</string>
    <string name="restaurant_no_phone_number">This restaurant has no phone number.</string>
    <string name="restaurant_no_website">This restaurant has no website.</string>
</resources>