<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_fragment_mapView"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_36dp"
        android:title="@string/menu_bottomNavigationView_mapView"/>
    <item
        android:id="@+id/menu_fragment_listView"
        android:enabled="true"
        android:icon="@drawable/ic_list_black_36dp"
        android:title="@string/menu_bottomNavigationView_listView"/>

    <item
        android:id="@+id/menu_fragment_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_group_black_36dp"
        android:title="@string/menu_bottomNavigationView_workmates"/>

    <item
        android:id="@+id/menu_fragment_chat"
        android:enabled="true"

        android:icon="@drawable/ic_baseline_chat_36"
        android:title="@string/menu_bottomNavigationView_chat"/>
</menu>